--- a/DnDMaster.css
+++ b/DnDMaster.css
@@ -24,6 +24,7 @@
         .form-row input {
             flex-grow: 1;
             max-width: 300px; /* Adjust the width as needed */
+            width: auto;
         }
 input {
     position: absolute;
