--- a/Dice.css
+++ b/Dice.css
@@ -1147,3 +1147,19 @@ input[type=radio]:nth-child(11):checked ~ .surface label:nth-child(16) .block-in
         transform: rotateX(-90deg) translateZ(16px) rotateY(0);
    }
 }
+
+.BackButton {
+    align-items: center;
+    background-color: #000000; /* Button color */
+    border-color: rgb(255, 67, 10);
+    color: rgb(255, 255, 255);
+    padding: 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    width: 100%;
+    font-size: 16px;
+    transition: background-color 0.3s;
+    margin-bottom: 15px;
+}
+
+
